# python-docs-ko

./: Makefile  README.rst  about.po  bugs.po  contents.po  copyright.po  glossary.po  license.po  pyproject.toml  sphinx.po
c-api/: abstract.po  allocation.po  apiabiversion.po  arg.po  bool.po  buffer.po  bytearray.po  bytes.po  call.po  capsule.po  cell.po  code.po  codec.po  complex.po  concrete.po  contextvars.po  conversion.po  coro.po  datetime.po  descriptor.po  dict.po  exceptions.po  file.po  float.po  frame.po  function.po  gcsupport.po  gen.po  hash.po  import.po  index.po  init.po  init_config.po  intro.po  iter.po  iterator.po  list.po  long.po  mapping.po  marshal.po  (+26 more)
deprecations/: pending-removal-in-3.13.po  pending-removal-in-3.14.po  pending-removal-in-3.15.po  pending-removal-in-3.16.po  pending-removal-in-future.po
distributing/: index.po
extending/: building.po  embedding.po  extending.po  index.po  newtypes.po  newtypes_tutorial.po  windows.po
faq/: design.po  extending.po  general.po  gui.po  index.po  installed.po  library.po  programming.po  windows.po
howto/: annotations.po  argparse.po  clinic.po  cporting.po  curses.po  descriptor.po  enum.po  functional.po  gdb_helpers.po  index.po  instrumentation.po  ipaddress.po  isolating-extensions.po  logging-cookbook.po  logging.po  mro.po  perf_profiling.po  pyporting.po  regex.po  sockets.po  sorting.po  unicode.po  urllib2.po
installing/: index.po
reference/: compound_stmts.po  datamodel.po  executionmodel.po  expressions.po  grammar.po  import.po  index.po  introduction.po  (+3 more)
(+47 files in other folders)
