[tool.poetry]
name = "python-docs-ko"
version = "0.1.0"
description = "Python Documentation Korean Translation"
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
license = "PSFL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
