[tool.poetry]
name = "python-docs-ko"
version = "0.1.0"
description = "Python Documentation Korean Translation"
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
license = "PSFL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
# Makefile dependency
poutils = "==0.13.0"

# python/Docs dependencies
sphinx = "~=7.4.0"
blurb = "*"
sphinxext-opengraph = "~=0.9.0"
sphinx-notfound-page = "~=1.0.0"
python-docs-theme = ">=2023.3.1,!=2023.7"

# python/Docs dependency constraints
babel = "<3"
colorama = "<0.5"
imagesize = "<1.5"
Jinja2 = "<3.2"
packaging = "<24"
Pygments = ">=2.16.1,<3"
requests = "<3"
snowballstemmer = "<3"
sphinxcontrib-applehelp = "<1.0.5"
sphinxcontrib-devhelp = "<1.0.6"
sphinxcontrib-htmlhelp = "<2.0.5"
sphinxcontrib-jsmath = "<1.1"
sphinxcontrib-qthelp = "<1.0.7"
sphinxcontrib-serializinghtml = "<1.1.10"
MarkupSafe = "<2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
